--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -57,20 +57,20 @@
     }
   }
 
-  &--lg {
+  &__lg {
     @include rem(font-size, $base-font-size * 1.3);
   }
 
-  &--sm {
+  &__sm {
     @include rem(font-size, $base-font-size * .7);
   }
 
-  &--wide {
+  &__wide {
     @include rem(padding-left, 100px);
     @include rem(padding-right, 100px);
   }
 
-  &--tall {
+  &__tall {
     @include rem(padding-bottom, 30px);
     @include rem(padding-top, 30px);
   }
