--- a/assets/scss/layout/_grid.scss
+++ b/assets/scss/layout/_grid.scss
@@ -16,15 +16,15 @@
   position: relative;
   width: 100%;
 
-  &--sm {
+  &__sm {
     @include rem(max-width, $maxwidth-sm);
   }
 
-  &--lg {
+  &__lg {
     @include rem(max-width, $maxwidth-lg);
   }
 
-  &--xl {
+  &__xl {
     @include rem(max-width, $maxwidth-xl);
   }
 }
@@ -49,7 +49,7 @@
   @include col(3/4);
 }
 
-.stack-cols--md {
+.stack-cols__md {
   @include bp(md) {
     > * {
       @include stack;
