--- a/assets/scss/layout/_typography.scss
+++ b/assets/scss/layout/_typography.scss
@@ -9,7 +9,7 @@ body {
   @include rem(font-size, $base-font-size);
   @include rem(line-height, $base-font-size * 1.7);
   color: $textcolor;
-  font-family: $primary-font;
+  font-family: $sans-serif-font;
   font-weight: 400;
   text-rendering: optimizeLegibility;
 }
@@ -28,7 +28,7 @@ h5,
 h6 {
   @include rem(margin, 0 0 $gap-fixed-sm 0);
   color: $textcolor-medstrong;
-  font-family: $secondary-font;
+  font-family: $serif-font;
   font-weight: 700;
 
   small {
@@ -85,7 +85,7 @@ strong {
 small {
   @include rem(font-size, $base-font-size * .8);
   color: $textcolor-subtle;
-  font-family: $secondary-font;
+  font-family: $serif-font;
   font-style: italic;
 }
 
@@ -95,19 +95,19 @@ code {
   font-weight: 400;
 }
 
-.text--center {
+.text__center {
   text-align: center;
 }
 
-.text--right {
+.text__right {
   text-align: right;
 }
 
-.text--left {
+.text__left {
   text-align: left;
 }
 
-.text--reversed {
+.text__reversed {
   color: $white;
 }
 
@@ -119,7 +119,7 @@ blockquote {
   @include rem(line-height, 28px);
   border: 0;
   color: $textcolor;
-  font-family: $secondary-font;
+  font-family: $serif-font;
   font-style: italic;
   font-weight: 400;
   position: relative;
@@ -137,27 +137,27 @@ blockquote {
 
   }
 
-  &:before,
-  &:after {
+  &::before,
+  &::after {
     @include rem(height, 35px);
     @include rem(width, 44px);
     display: block;
-    font-family: $secondary-font;
+    font-family: $serif-font;
     position: absolute;
     z-index: -1;
   }
 
-  &:before {
+  &::before {
     content: '\201C';
   }
 
-  &:after {
+  &::after {
     content: '\201D';
   }
 }
 
 q {
-  font-family: $secondary-font;
+  font-family: $serif-font;
   font-style: italic;
   font-weight: 400;
 }
@@ -169,12 +169,12 @@ cite {
   @include rem(margin, 0 0 $gap-fixed 0);
   color: $textcolor-subtle;
   display: block;
-  font-family: $primary-font;
+  font-family: $sans-serif-font;
   font-style: normal;
   font-weight: 300;
   text-align: right;
 
-  &:before {
+  &::before {
     content: '\2014\00a0';
     display: inline-block;
   }
