--- a/assets/scss/components/_pagination.scss
+++ b/assets/scss/components/_pagination.scss
@@ -5,7 +5,7 @@
   @extend %clearfix;
   @include rem(font-size, 15px);
   @include rem(line-height, 21px);
-  @include rem(margin, $gap-fixed-lg 0 ($gap-fixed-lg - 6px) 0);
+  @include rem(margin, $gap-lg 0 ($gap-lg - 6px) 0);
   overflow: hidden;
   padding: 0;
 
