--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -15,63 +15,64 @@
   vertical-align: middle;
   white-space: nowrap;
 
-  &__default {
-    background: $offsetcolor-subtle;
-    border: 1px solid $offsetcolor-strong;
+  &--default {
+    background-color: $offsetcolor-subtle;
+    border-color: $offsetcolor-strong;
     color: $textcolor;
 
     &:hover {
-      background: $offsetcolor;
+      background-color: $offsetcolor;
       color: $textcolor;
     }
   }
 
-  &__primary {
-    background: $primarycolor;
+  &--primary {
+    background-color: $primarycolor;
     color: $white;
 
     &:hover {
-      background: $primarycolor-dark;
+      background-color: $primarycolor-dark;
       color: $white;
     }
   }
 
-  &__secondary {
-    background: $secondarycolor;
+  &--secondary {
+    background-color: $secondarycolor;
     color: $white;
 
     &:hover {
-      background: $secondarycolor-dark;
+      background-color: $secondarycolor-dark;
       color: $white;
     }
   }
 
-  &__ghost {
-    border: 1px solid $primarycolor;
-    color: $primarycolor;
-
-    &:hover {
-      background: $primarycolor;
-      border: 1px solid transparent;
-      color: $white;
-    }
-  }
-
-  &__lg {
+  &--lg {
     @include rem(font-size, $base-font-size * 1.3);
   }
 
-  &__sm {
+  &--sm {
     @include rem(font-size, $base-font-size * .7);
   }
 
-  &__wide {
+  &--wide {
     @include rem(padding-left, 100px);
     @include rem(padding-right, 100px);
   }
 
-  &__tall {
+  &--tall {
     @include rem(padding-bottom, 30px);
     @include rem(padding-top, 30px);
+  }
+
+  &__ghost {
+    background-color: transparent;
+    border-color; $primarycolor;
+    color: $primarycolor;
+
+    &:hover {
+      background-color: $primarycolor;
+      border-color: transparent;
+      color: $white;
+    }
   }
 }
