--- a/assets/scss/layout/_typography.scss
+++ b/assets/scss/layout/_typography.scss
@@ -17,7 +17,7 @@ body {
 p,
 pre,
 address {
-  @include rem(margin, 0 0 $gap-fixed 0);
+  @include rem(margin, 0 0 $gap 0);
 }
 
 h1,
@@ -26,7 +26,7 @@ h3,
 h4,
 h5,
 h6 {
-  @include rem(margin, 0 0 $gap-fixed-sm 0);
+  @include rem(margin, 0 0 $gap-sm 0);
   color: $textcolor-medstrong;
   font-family: $serif-font;
   font-weight: 700;
@@ -78,116 +78,15 @@ a {
 }
 
 strong {
-  color: $textcolor-medstrong;
   font-weight: 700;
 }
 
 small {
   @include rem(font-size, $base-font-size * .8);
-  color: $textcolor-subtle;
-  font-family: $serif-font;
-  font-style: italic;
 }
 
 code {
   color: $textcolor-subtle;
   font-family: Consolas, 'Liberation Mono', Courier, monospace;
   font-weight: 400;
-}
-
-.text__center {
-  text-align: center;
-}
-
-.text__right {
-  text-align: right;
-}
-
-.text__left {
-  text-align: left;
-}
-
-.text__reversed {
-  color: $white;
-}
-
-blockquote {
-  @include rem(margin, 0 0 $gap-fixed-sm 0);
-  @include rem(padding, 5px $gap 0 $gap);
-  @include rem(min-height, 35px);
-  @include rem(font-size, 21px);
-  @include rem(line-height, 28px);
-  border: 0;
-  color: $textcolor;
-  font-family: $serif-font;
-  font-style: italic;
-  font-weight: 400;
-  position: relative;
-  text-align: center;
-  width: 100%;
-  z-index: 2;
-
-  p {
-    display: inline-block;
-
-    &:last-child {
-      margin-bottom: 0;
-      padding-bottom: 0;
-    }
-
-  }
-
-  &::before,
-  &::after {
-    @include rem(height, 35px);
-    @include rem(width, 44px);
-    display: block;
-    font-family: $serif-font;
-    position: absolute;
-    z-index: -1;
-  }
-
-  &::before {
-    content: '\201C';
-  }
-
-  &::after {
-    content: '\201D';
-  }
-}
-
-q {
-  font-family: $serif-font;
-  font-style: italic;
-  font-weight: 400;
-}
-
-figcaption,
-cite {
-  @include rem(font-size, 14px);
-  @include rem(line-height, 20px);
-  @include rem(margin, 0 0 $gap-fixed 0);
-  color: $textcolor-subtle;
-  display: block;
-  font-family: $sans-serif-font;
-  font-style: normal;
-  font-weight: 300;
-  text-align: right;
-
-  &::before {
-    content: '\2014\00a0';
-    display: inline-block;
-  }
-}
-
-.primary-color {
-  color: $primarycolor;
-}
-
-.secondary-color {
-  color: $secondarycolor;
-}
-
-.all-caps {
-  text-transform: uppercase;
 }
