--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -13,7 +13,8 @@
 @import 'layout/_typography';
 @import 'layout/_helper-mixins';
 @import 'layout/_helper-classes';
-@import 'layout/_grid';
+@import 'layout/_structure';
+@import 'layout/_template-content';
 
 // Components
 
