--- a/assets/scss/layout/_template-content.scss
+++ b/assets/scss/layout/_template-content.scss
@@ -48,7 +48,7 @@
       border-bottom: 1px solid $primarycolor-dark;
       border-right: 1px solid $primarycolor-dark;
       color: $white;
-      font-family: $secondary-font;
+      font-family: $serif-font;
       font-weight: 700;
       text-align: left;
 
