--- a/assets/scss/components/_pagination.scss
+++ b/assets/scss/components/_pagination.scss
@@ -26,7 +26,7 @@
   a {
     @include rem(padding, 6px 12px);
     @include border-radius(3px);
-    @include transition-duration($transitionduration);
+    @include transition-duration($transition-duration);
     background: $primarycolor;
     color: $textcolor-subtle;
     display: block;
