--- a/assets/scss/components/_pagination.scss
+++ b/assets/scss/components/_pagination.scss
@@ -25,9 +25,9 @@
 
   a {
     @include rem(padding, 6px 12px);
-    @include border-radius(3px);
     @include transition-duration($transition-duration);
     background: $primarycolor;
+    border-radius: 3px;
     color: $textcolor-subtle;
     display: block;
     text-decoration: none;
