--- a/assets/scss/layout/_typography.scss
+++ b/assets/scss/layout/_typography.scss
@@ -7,10 +7,10 @@ html {
 
 body {
   @include rem(font-size, $base-font-size);
-  @include rem(line-height, $base-font-size * 1.7);
   color: $textcolor;
   font-family: $sans-serif-font;
   font-weight: 400;
+  line-height: 1.2;
   text-rendering: optimizeLegibility;
 }
 
@@ -39,32 +39,26 @@ h6 {
 
 h1 {
   @include rem(font-size, 32px);
-  @include rem(line-height, 39px);
 }
 
 h2 {
   @include rem(font-size, 26px);
-  @include rem(line-height, 33px);
 }
 
 h3 {
   @include rem(font-size, 21px);
-  @include rem(line-height, 28px);
 }
 
 h4 {
   @include rem(font-size, 18px);
-  @include rem(line-height, 25px);
 }
 
 h5 {
   @include rem(font-size, 16px);
-  @include rem(line-height, 23px);
 }
 
 h6 {
   @include rem(font-size, 14px);
-  @include rem(line-height, 21px);
 }
 
 a {
