--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -2,7 +2,7 @@
 // Third Party Base Stuff
 
 @import '../../components/bourbon/app/assets/stylesheets/bourbon';
-@import '../../components/normalize-scss/normalize';
+@import '../../components/normalize-scss/_normalize.scss';
 @import '../../components/jeet/scss/jeet/jeet';
 
 // Settings
