--- a/source/scss/layout/_base.scss
+++ b/source/scss/layout/_base.scss
@@ -75,6 +75,12 @@ img {
     @include rem(margin, 0 auto $gap auto);
     display: block;
   }
+
+  &.no-float {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .captionImage {
@@ -109,6 +115,12 @@ img {
 
   &.leftAlone {
     @include rem(margin-right, $gap);
+  }
+
+  &.no-float {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
