--- a/source/scss/layout/_helper-mixins.scss
+++ b/source/scss/layout/_helper-mixins.scss
@@ -73,17 +73,17 @@
 @mixin absolutecenter($axis: 'both') {
   position: absolute;
   @if $axis == 'y' {
-    @include transform(translateY(-50%));
     top: 50%;
+    transform: translateY(-50%);
   }
   @if $axis == 'x' {
-    @include transform(translateX(-50%));
     left: 50%;
+    transform: translateX(-50%);
   }
   @if $axis == 'both' {
-    @include transform(translate(-50%, -50%));
     left: 50%;
     top: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 
@@ -92,7 +92,7 @@
 }
 
 @mixin unabsolutecenter {
-  @include transform(translate(0, 0));
+  transform: translate(0, 0);
   left: inherit;
   position: inherit;
   top: inherit;
