--- a/source/scss/layout/_structure.scss
+++ b/source/scss/layout/_structure.scss
@@ -83,23 +83,23 @@
 
 .col {
   &--half {
-    @include col(1/2);
+    @include column(1/2);
   }
 
   &--one-third {
-    @include col(1/3);
+    @include column(1/3);
   }
 
   &--two-thirds {
-    @include col(2/3);
+    @include column(2/3);
   }
 
   &--one-fourth {
-    @include col(1/4);
+    @include column(1/4);
   }
 
   &--three-fourths {
-    @include col(3/4);
+    @include column(3/4);
   }
 
   &--stack-on-md {
