--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -6,7 +6,7 @@
 // Settings
 
 @import 'settings/_colors';
-@import 'settings/_dimensions';
+@import 'settings/_vars';
 
 // Typography / Base Stuff
 
@@ -23,6 +23,7 @@
 @import 'components/_buttons';
 @import 'components/_forms';
 @import 'components/_pagination';
+@import 'components/_ss-images';
 
 // Sitewide Chrome
 
