--- a/source/scss/components/_forms.scss
+++ b/source/scss/components/_forms.scss
@@ -13,7 +13,7 @@
   border-radius: 0;
   box-shadow: none;
   color: $textcolor;
-  font-family: $sans-serif-font;
+  font-family: $sans-serif;
   height: auto;
   margin: 0;
   outline: none;
@@ -30,7 +30,7 @@
   @include rem(padding, 0 0 $gap-xs 0);
   clear: both;
   color: $textcolor-strong;
-  font-family: $sans-serif-font;
+  font-family: $sans-serif;
   font-weight: 700;
   margin: 0;
 }
