--- a/source/css/layout/base.css
+++ b/source/css/layout/base.css
@@ -24,8 +24,8 @@ html {
 /* Vanity Styles */
 
 ::selection {
-  background: $primarycolor;
-  color: $white;
+  background: var(--primarycolor);
+  color: #fff;
 }
 
 /* Base List Styles */
