--- a/source/css/components/forms.css
+++ b/source/css/components/forms.css
@@ -119,10 +119,10 @@ input {
     @apply --input-focus-styles;
   }
 
-  &.checkbox {
+  &[type='checkbox'] {
     float: left;
-    margin-right: 10px;
-    width: inherit;
+    margin: 6px 10px 0 0;
+    width: auto;
   }
 }
 
@@ -161,7 +161,8 @@ select {
   vertical-align: bottom;
 
   &.text,
-  &.email {
+  &.email,
+  &.password {
     @media (--md) {
       width: 50%;
     }
@@ -306,4 +307,9 @@ label {
 
 .form-text {
   color: var(--textcolor);
+}
+
+.action {
+  @apply (--btn-styles);
+  @apply (--primary-btn-styles);
 }
